Fase 1/backend/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> CONSOLE PTO LOG PARABRE expresion PARCIERRA PTOCOMA
Rule 5     instruccion -> LET ID DOSPTOS tipo IGUAL expresion PTOCOMA
Rule 6     instruccion -> LET ID IGUAL expresion PTOCOMA
Rule 7     expresion -> expresion AND expresion
Rule 8     expresion -> expresion OR expresion
Rule 9     expresion -> NOT expresion
Rule 10    expresion -> expresion MAYOR expresion
Rule 11    expresion -> expresion MENOR expresion
Rule 12    expresion -> expresion IGUALACION expresion
Rule 13    expresion -> expresion DIFERENTE expresion
Rule 14    expresion -> expresion MAYORIGUAL expresion
Rule 15    expresion -> expresion MENORIGUAL expresion
Rule 16    expresion -> expresion POTENCIA expresion
Rule 17    expresion -> expresion MODULO expresion
Rule 18    expresion -> expresion SUMA expresion
Rule 19    expresion -> expresion RESTA expresion
Rule 20    expresion -> expresion MULTIPLICACION expresion
Rule 21    expresion -> expresion DIVISION expresion
Rule 22    expresion -> ENTERO
Rule 23    expresion -> DECIMAL
Rule 24    expresion -> CADENA
Rule 25    expresion -> FALSO
Rule 26    expresion -> VERDADERO
Rule 27    expresion -> ID
Rule 28    expresion -> INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
Rule 29    expresion -> NULL
Rule 30    tipo -> STRING
Rule 31    tipo -> NUMBER
Rule 32    tipo -> BOOLEAN

Terminals, with rules where they appear

AND                  : 7
BOOLEAN              : 32
CADENA               : 24
CONSOLE              : 4
DECIMAL              : 23
DIFERENTE            : 13
DIVISION             : 21
DOSPTOS              : 5
ENTERO               : 22
FALSO                : 25
ID                   : 5 6 27 28
IGUAL                : 5 6
IGUALACION           : 12
INTERFACE            : 28
LET                  : 5 6
LLAVEABRE            : 28
LLAVECIERRA          : 28
LOG                  : 4
MAYOR                : 10
MAYORIGUAL           : 14
MENOR                : 11
MENORIGUAL           : 15
MODULO               : 17
MULTIPLICACION       : 20
NOT                  : 9
NULL                 : 29
NUMBER               : 31
OR                   : 8
PARABRE              : 4
PARCIERRA            : 4
POTENCIA             : 16
PTO                  : 4
PTOCOMA              : 4 5 6 28
RESTA                : 19
STRING               : 30
SUMA                 : 18
VERDADERO            : 26
error                : 

Nonterminals, with rules where they appear

expresion            : 4 5 6 7 7 8 8 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
tipo                 : 5

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . CONSOLE PTO LOG PARABRE expresion PARCIERRA PTOCOMA
    (5) instruccion -> . LET ID DOSPTOS tipo IGUAL expresion PTOCOMA
    (6) instruccion -> . LET ID IGUAL expresion PTOCOMA

    CONSOLE         shift and go to state 4
    LET             shift and go to state 5

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . CONSOLE PTO LOG PARABRE expresion PARCIERRA PTOCOMA
    (5) instruccion -> . LET ID DOSPTOS tipo IGUAL expresion PTOCOMA
    (6) instruccion -> . LET ID IGUAL expresion PTOCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 4
    LET             shift and go to state 5

    instruccion                    shift and go to state 6

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> CONSOLE . PTO LOG PARABRE expresion PARCIERRA PTOCOMA

    PTO             shift and go to state 7


state 5

    (5) instruccion -> LET . ID DOSPTOS tipo IGUAL expresion PTOCOMA
    (6) instruccion -> LET . ID IGUAL expresion PTOCOMA

    ID              shift and go to state 8


state 6

    (2) instrucciones -> instrucciones instruccion .

    CONSOLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 7

    (4) instruccion -> CONSOLE PTO . LOG PARABRE expresion PARCIERRA PTOCOMA

    LOG             shift and go to state 9


state 8

    (5) instruccion -> LET ID . DOSPTOS tipo IGUAL expresion PTOCOMA
    (6) instruccion -> LET ID . IGUAL expresion PTOCOMA

    DOSPTOS         shift and go to state 10
    IGUAL           shift and go to state 11


state 9

    (4) instruccion -> CONSOLE PTO LOG . PARABRE expresion PARCIERRA PTOCOMA

    PARABRE         shift and go to state 12


state 10

    (5) instruccion -> LET ID DOSPTOS . tipo IGUAL expresion PTOCOMA
    (30) tipo -> . STRING
    (31) tipo -> . NUMBER
    (32) tipo -> . BOOLEAN

    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    BOOLEAN         shift and go to state 16

    tipo                           shift and go to state 13

state 11

    (6) instruccion -> LET ID IGUAL . expresion PTOCOMA
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 18

state 12

    (4) instruccion -> CONSOLE PTO LOG PARABRE . expresion PARCIERRA PTOCOMA
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 27

state 13

    (5) instruccion -> LET ID DOSPTOS tipo . IGUAL expresion PTOCOMA

    IGUAL           shift and go to state 28


state 14

    (30) tipo -> STRING .

    IGUAL           reduce using rule 30 (tipo -> STRING .)


state 15

    (31) tipo -> NUMBER .

    IGUAL           reduce using rule 31 (tipo -> NUMBER .)


state 16

    (32) tipo -> BOOLEAN .

    IGUAL           reduce using rule 32 (tipo -> BOOLEAN .)


state 17

    (27) expresion -> ID .

    PTOCOMA         reduce using rule 27 (expresion -> ID .)
    AND             reduce using rule 27 (expresion -> ID .)
    OR              reduce using rule 27 (expresion -> ID .)
    MAYOR           reduce using rule 27 (expresion -> ID .)
    MENOR           reduce using rule 27 (expresion -> ID .)
    IGUALACION      reduce using rule 27 (expresion -> ID .)
    DIFERENTE       reduce using rule 27 (expresion -> ID .)
    MAYORIGUAL      reduce using rule 27 (expresion -> ID .)
    MENORIGUAL      reduce using rule 27 (expresion -> ID .)
    POTENCIA        reduce using rule 27 (expresion -> ID .)
    MODULO          reduce using rule 27 (expresion -> ID .)
    SUMA            reduce using rule 27 (expresion -> ID .)
    RESTA           reduce using rule 27 (expresion -> ID .)
    MULTIPLICACION  reduce using rule 27 (expresion -> ID .)
    DIVISION        reduce using rule 27 (expresion -> ID .)
    PARCIERRA       reduce using rule 27 (expresion -> ID .)


state 18

    (6) instruccion -> LET ID IGUAL expresion . PTOCOMA
    (7) expresion -> expresion . AND expresion
    (8) expresion -> expresion . OR expresion
    (10) expresion -> expresion . MAYOR expresion
    (11) expresion -> expresion . MENOR expresion
    (12) expresion -> expresion . IGUALACION expresion
    (13) expresion -> expresion . DIFERENTE expresion
    (14) expresion -> expresion . MAYORIGUAL expresion
    (15) expresion -> expresion . MENORIGUAL expresion
    (16) expresion -> expresion . POTENCIA expresion
    (17) expresion -> expresion . MODULO expresion
    (18) expresion -> expresion . SUMA expresion
    (19) expresion -> expresion . RESTA expresion
    (20) expresion -> expresion . MULTIPLICACION expresion
    (21) expresion -> expresion . DIVISION expresion

    PTOCOMA         shift and go to state 29
    AND             shift and go to state 30
    OR              shift and go to state 31
    MAYOR           shift and go to state 32
    MENOR           shift and go to state 33
    IGUALACION      shift and go to state 34
    DIFERENTE       shift and go to state 35
    MAYORIGUAL      shift and go to state 36
    MENORIGUAL      shift and go to state 37
    POTENCIA        shift and go to state 38
    MODULO          shift and go to state 39
    SUMA            shift and go to state 40
    RESTA           shift and go to state 41
    MULTIPLICACION  shift and go to state 42
    DIVISION        shift and go to state 43


state 19

    (9) expresion -> NOT . expresion
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 44

state 20

    (22) expresion -> ENTERO .

    PTOCOMA         reduce using rule 22 (expresion -> ENTERO .)
    AND             reduce using rule 22 (expresion -> ENTERO .)
    OR              reduce using rule 22 (expresion -> ENTERO .)
    MAYOR           reduce using rule 22 (expresion -> ENTERO .)
    MENOR           reduce using rule 22 (expresion -> ENTERO .)
    IGUALACION      reduce using rule 22 (expresion -> ENTERO .)
    DIFERENTE       reduce using rule 22 (expresion -> ENTERO .)
    MAYORIGUAL      reduce using rule 22 (expresion -> ENTERO .)
    MENORIGUAL      reduce using rule 22 (expresion -> ENTERO .)
    POTENCIA        reduce using rule 22 (expresion -> ENTERO .)
    MODULO          reduce using rule 22 (expresion -> ENTERO .)
    SUMA            reduce using rule 22 (expresion -> ENTERO .)
    RESTA           reduce using rule 22 (expresion -> ENTERO .)
    MULTIPLICACION  reduce using rule 22 (expresion -> ENTERO .)
    DIVISION        reduce using rule 22 (expresion -> ENTERO .)
    PARCIERRA       reduce using rule 22 (expresion -> ENTERO .)


state 21

    (23) expresion -> DECIMAL .

    PTOCOMA         reduce using rule 23 (expresion -> DECIMAL .)
    AND             reduce using rule 23 (expresion -> DECIMAL .)
    OR              reduce using rule 23 (expresion -> DECIMAL .)
    MAYOR           reduce using rule 23 (expresion -> DECIMAL .)
    MENOR           reduce using rule 23 (expresion -> DECIMAL .)
    IGUALACION      reduce using rule 23 (expresion -> DECIMAL .)
    DIFERENTE       reduce using rule 23 (expresion -> DECIMAL .)
    MAYORIGUAL      reduce using rule 23 (expresion -> DECIMAL .)
    MENORIGUAL      reduce using rule 23 (expresion -> DECIMAL .)
    POTENCIA        reduce using rule 23 (expresion -> DECIMAL .)
    MODULO          reduce using rule 23 (expresion -> DECIMAL .)
    SUMA            reduce using rule 23 (expresion -> DECIMAL .)
    RESTA           reduce using rule 23 (expresion -> DECIMAL .)
    MULTIPLICACION  reduce using rule 23 (expresion -> DECIMAL .)
    DIVISION        reduce using rule 23 (expresion -> DECIMAL .)
    PARCIERRA       reduce using rule 23 (expresion -> DECIMAL .)


state 22

    (24) expresion -> CADENA .

    PTOCOMA         reduce using rule 24 (expresion -> CADENA .)
    AND             reduce using rule 24 (expresion -> CADENA .)
    OR              reduce using rule 24 (expresion -> CADENA .)
    MAYOR           reduce using rule 24 (expresion -> CADENA .)
    MENOR           reduce using rule 24 (expresion -> CADENA .)
    IGUALACION      reduce using rule 24 (expresion -> CADENA .)
    DIFERENTE       reduce using rule 24 (expresion -> CADENA .)
    MAYORIGUAL      reduce using rule 24 (expresion -> CADENA .)
    MENORIGUAL      reduce using rule 24 (expresion -> CADENA .)
    POTENCIA        reduce using rule 24 (expresion -> CADENA .)
    MODULO          reduce using rule 24 (expresion -> CADENA .)
    SUMA            reduce using rule 24 (expresion -> CADENA .)
    RESTA           reduce using rule 24 (expresion -> CADENA .)
    MULTIPLICACION  reduce using rule 24 (expresion -> CADENA .)
    DIVISION        reduce using rule 24 (expresion -> CADENA .)
    PARCIERRA       reduce using rule 24 (expresion -> CADENA .)


state 23

    (25) expresion -> FALSO .

    PTOCOMA         reduce using rule 25 (expresion -> FALSO .)
    AND             reduce using rule 25 (expresion -> FALSO .)
    OR              reduce using rule 25 (expresion -> FALSO .)
    MAYOR           reduce using rule 25 (expresion -> FALSO .)
    MENOR           reduce using rule 25 (expresion -> FALSO .)
    IGUALACION      reduce using rule 25 (expresion -> FALSO .)
    DIFERENTE       reduce using rule 25 (expresion -> FALSO .)
    MAYORIGUAL      reduce using rule 25 (expresion -> FALSO .)
    MENORIGUAL      reduce using rule 25 (expresion -> FALSO .)
    POTENCIA        reduce using rule 25 (expresion -> FALSO .)
    MODULO          reduce using rule 25 (expresion -> FALSO .)
    SUMA            reduce using rule 25 (expresion -> FALSO .)
    RESTA           reduce using rule 25 (expresion -> FALSO .)
    MULTIPLICACION  reduce using rule 25 (expresion -> FALSO .)
    DIVISION        reduce using rule 25 (expresion -> FALSO .)
    PARCIERRA       reduce using rule 25 (expresion -> FALSO .)


state 24

    (26) expresion -> VERDADERO .

    PTOCOMA         reduce using rule 26 (expresion -> VERDADERO .)
    AND             reduce using rule 26 (expresion -> VERDADERO .)
    OR              reduce using rule 26 (expresion -> VERDADERO .)
    MAYOR           reduce using rule 26 (expresion -> VERDADERO .)
    MENOR           reduce using rule 26 (expresion -> VERDADERO .)
    IGUALACION      reduce using rule 26 (expresion -> VERDADERO .)
    DIFERENTE       reduce using rule 26 (expresion -> VERDADERO .)
    MAYORIGUAL      reduce using rule 26 (expresion -> VERDADERO .)
    MENORIGUAL      reduce using rule 26 (expresion -> VERDADERO .)
    POTENCIA        reduce using rule 26 (expresion -> VERDADERO .)
    MODULO          reduce using rule 26 (expresion -> VERDADERO .)
    SUMA            reduce using rule 26 (expresion -> VERDADERO .)
    RESTA           reduce using rule 26 (expresion -> VERDADERO .)
    MULTIPLICACION  reduce using rule 26 (expresion -> VERDADERO .)
    DIVISION        reduce using rule 26 (expresion -> VERDADERO .)
    PARCIERRA       reduce using rule 26 (expresion -> VERDADERO .)


state 25

    (28) expresion -> INTERFACE . ID LLAVEABRE LLAVECIERRA PTOCOMA

    ID              shift and go to state 45


state 26

    (29) expresion -> NULL .

    PTOCOMA         reduce using rule 29 (expresion -> NULL .)
    AND             reduce using rule 29 (expresion -> NULL .)
    OR              reduce using rule 29 (expresion -> NULL .)
    MAYOR           reduce using rule 29 (expresion -> NULL .)
    MENOR           reduce using rule 29 (expresion -> NULL .)
    IGUALACION      reduce using rule 29 (expresion -> NULL .)
    DIFERENTE       reduce using rule 29 (expresion -> NULL .)
    MAYORIGUAL      reduce using rule 29 (expresion -> NULL .)
    MENORIGUAL      reduce using rule 29 (expresion -> NULL .)
    POTENCIA        reduce using rule 29 (expresion -> NULL .)
    MODULO          reduce using rule 29 (expresion -> NULL .)
    SUMA            reduce using rule 29 (expresion -> NULL .)
    RESTA           reduce using rule 29 (expresion -> NULL .)
    MULTIPLICACION  reduce using rule 29 (expresion -> NULL .)
    DIVISION        reduce using rule 29 (expresion -> NULL .)
    PARCIERRA       reduce using rule 29 (expresion -> NULL .)


state 27

    (4) instruccion -> CONSOLE PTO LOG PARABRE expresion . PARCIERRA PTOCOMA
    (7) expresion -> expresion . AND expresion
    (8) expresion -> expresion . OR expresion
    (10) expresion -> expresion . MAYOR expresion
    (11) expresion -> expresion . MENOR expresion
    (12) expresion -> expresion . IGUALACION expresion
    (13) expresion -> expresion . DIFERENTE expresion
    (14) expresion -> expresion . MAYORIGUAL expresion
    (15) expresion -> expresion . MENORIGUAL expresion
    (16) expresion -> expresion . POTENCIA expresion
    (17) expresion -> expresion . MODULO expresion
    (18) expresion -> expresion . SUMA expresion
    (19) expresion -> expresion . RESTA expresion
    (20) expresion -> expresion . MULTIPLICACION expresion
    (21) expresion -> expresion . DIVISION expresion

    PARCIERRA       shift and go to state 46
    AND             shift and go to state 30
    OR              shift and go to state 31
    MAYOR           shift and go to state 32
    MENOR           shift and go to state 33
    IGUALACION      shift and go to state 34
    DIFERENTE       shift and go to state 35
    MAYORIGUAL      shift and go to state 36
    MENORIGUAL      shift and go to state 37
    POTENCIA        shift and go to state 38
    MODULO          shift and go to state 39
    SUMA            shift and go to state 40
    RESTA           shift and go to state 41
    MULTIPLICACION  shift and go to state 42
    DIVISION        shift and go to state 43


state 28

    (5) instruccion -> LET ID DOSPTOS tipo IGUAL . expresion PTOCOMA
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 47

state 29

    (6) instruccion -> LET ID IGUAL expresion PTOCOMA .

    CONSOLE         reduce using rule 6 (instruccion -> LET ID IGUAL expresion PTOCOMA .)
    LET             reduce using rule 6 (instruccion -> LET ID IGUAL expresion PTOCOMA .)
    $end            reduce using rule 6 (instruccion -> LET ID IGUAL expresion PTOCOMA .)


state 30

    (7) expresion -> expresion AND . expresion
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 48

state 31

    (8) expresion -> expresion OR . expresion
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 49

state 32

    (10) expresion -> expresion MAYOR . expresion
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 50

state 33

    (11) expresion -> expresion MENOR . expresion
    (7) expresion -> . expresion AND expresion
    (8) expresion -> . expresion OR expresion
    (9) expresion -> . NOT expresion
    (10) expresion -> . expresion MAYOR expresion
    (11) expresion -> . expresion MENOR expresion
    (12) expresion -> . expresion IGUALACION expresion
    (13) expresion -> . expresion DIFERENTE expresion
    (14) expresion -> . expresion MAYORIGUAL expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion POTENCIA expresion
    (17) expresion -> . expresion MODULO expresion
    (18) expresion -> . expresion SUMA expresion
    (19) expresion -> . expresion RESTA expresion
    (20) expresion -> . expresion MULTIPLICACION expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . FALSO
    (26) expresion -> . VERDADERO
    (27) expresion -> . ID
    (28) expresion -> . INTERFACE ID LLAVEABRE LLAVECIERRA PTOCOMA
    (29) expresion -> . NULL

    NOT             shift and go to state 19
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CADENA          shift and go to state 22
    FALSO           shift and go to state 23
    VERDADERO       shift and go to state 24
    ID              shift and go to state 17
    INTERFACE       shift and go to state 25
    NULL            shift and go to state 26

    expresion                      shift and go to state 51

state 34
